@@ -1,5 +1,8 @@
 2011-01-20 Pierre Wieser <pwieser@trychlos.org>
 
+	* src/plugin-menu/nautilus-actions.c:
+	* src/plugin-menu/nautilus-actions.h: Cosmetic changes in src/plugin-menu headers
+
 	* src/nact/base-application.c:
 	* src/nact/base-application-class.h:
 	* src/nact/base-assistant.c:
